# dictation-plus

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-app.yml
contrib/: com.dictation.plist  dictation.service
docs/plans/: 2026-03-05-local-dictation-implementation.md  2026-03-05-local-dictation-service-design.md
src/dictation/: __init__.py  api.py  audio.py  cli.py  config.py  daemon.py  injector.py  models.py  pool.py  stt.py  stt_whisper.py  tts.py
tests/: conftest.py  debug_mic.py  test_api.py  test_audio.py  test_cli.py  test_config.py  test_daemon.py  test_injector.py  test_integration.py  test_models.py  test_pool.py  test_stt.py  test_stt_whisper.py  test_tts.py
tests/e2e/: Dockerfile  demo.sh  run_e2e.sh  test_e2e.py
