[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dictation"
version = "0.1.0"
description = "Lightweight local dictation service with STT and TTS"
requires-python = ">=3.11"
dependencies = [
    "vosk>=0.3.45",
    "piper-tts>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sounddevice>=0.5.0",
    "pynput>=1.7.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[project.scripts]
dictation = "dictation.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dictation"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
